# fizmo-glktermw

./: CHANGELOG.md  CHANGELOG.txt  Makefile  Makefile.am  Makefile.in  config-flags.m4  config-libs.m4  config-subst.m4  config.default.mk  config.macports.mk  configure  configure.ac
debian/: changelog  control  fizmo-glktermw-launcher  fizmo-glktermw.install  fizmo-glktermw.postinst  fizmo-glktermw.prerm  watch
doc/: changelog.xml
src/fizmo-glktermw/: Makefile  Makefile.am  Makefile.in  fizmo-glktermw.c
